# teanganlp.github.io

./: .gitignore  index.html
.github/workflows/: static.yml
corpora/: .gitattributes  switchboard.yaml
examples/: ex1.yaml
ref_corpora/: nltk_corpora.py  pyproject.toml
